Reduce number of todos on page, fix bug where todos will stretch to height of categories-container if there are less todos that height of categories-container

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -156,6 +156,7 @@ $purple: #d2ceff;
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: auto;
+  height: 0;
 }
 
 .todo {
